# trigseq

./: trigseq.cabal
src/Math/Sequence/: Trig.hs
