name:                   trigseq
version:                0.9
stability:              provisional

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Math, Numerical
synopsis:               Fast recurrences for simple trigonometric sequences
description:            Fast recurrences for sequences defined by mapping sin,  
                        cos, or tan over lists of equally-spaced points.

tested-with:            GHC == 6.8.3,
                        GHC == 6.10.4,
                        GHC == 6.12.1, GHC == 6.12.3

source-repository head
  type: git
  location: https://github.com/mokus0/trigseq.git

Library
  hs-source-dirs:       src
  exposed-modules:      Math.Sequence.Trig
  build-depends:        base >= 3 && <5
